--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,7 @@ body {
     margin: 20px 0;
     padding: 10px; }
 
-.post-wrapper img {
+.post-wrapper .img-wrapper {
   float: left;
   margin: 0 10px 10px 0; }
 .post-wrapper div {
