--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,13 @@ body {
   padding: 0; }
 
 .jumbotron {
-  padding-top: 50px; }
+  padding-top: 50px;
+  background: #fbd334;
+  color: #937603;
+  text-shadow: 1px 1px 0 #fff;
+  -webkit-text-shadow: 1px 1px 0 #fff;
+  -moz-text-shadow: 1px 1px 0 #fff;
+  -ms-text-shadow: 1px 1px 0 #fff; }
 
 .post-list {
   margin: 0;
