--- a/styles/scss/global.scss
+++ b/styles/scss/global.scss
@@ -13,7 +13,8 @@ body {
 }
 .jumbotron {
 	padding-top: 50px;
-	background: rgb(251, 211, 52);
+	background: rgb(251, 211, 52) url(../images/gg-bridge.jpg) top center no-repeat;
+	background-size: cover;
 	color: darken(rgb(251, 211, 52), 30%);
 	text-shadow: 1px 1px 0 #fff;
 	-webkit-text-shadow: 1px 1px 0 #fff;
