--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,8 @@ body {
 
 .jumbotron {
   padding-top: 50px;
-  background: #fbd334;
+  background: #fbd334 url(../images/gg-bridge.jpg) top center no-repeat;
+  background-size: cover;
   color: #937603;
   text-shadow: 1px 1px 0 #fff;
   -webkit-text-shadow: 1px 1px 0 #fff;
