--- a/styles/style.css
+++ b/styles/style.css
@@ -59,3 +59,16 @@ body {
 .sidebar {
   background: #eee;
   padding: 15px; }
+
+.top-btn {
+  position: fixed;
+  bottom: 50px;
+  right: 40%;
+  width: 80px;
+  background: rgba(150, 150, 150, 0.5);
+  color: white;
+  display: none; }
+  .top-btn:hover {
+    background: #969696; }
+  .top-btn .show {
+    display: block; }
